Add libery TouchImageView, add zoom schemes

--- a/app/src/main/res/layout/activity_eplan_show.xml
+++ b/app/src/main/res/layout/activity_eplan_show.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,37 +9,11 @@
     android:orientation="vertical"
     tools:context=".activities.EPlanShowActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/grr"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="30dp"
-            android:layout_height="40dp"
-            android:layout_marginVertical="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/logo2_gaz" />
-
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="60dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/agv2" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="630dp"
+        android:layout_height="match_parent"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@color/white"
@@ -103,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -116,7 +90,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -129,7 +103,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -142,7 +116,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -155,7 +129,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -168,7 +142,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -181,7 +155,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -194,7 +168,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -207,7 +181,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -220,7 +194,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -233,7 +207,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image11"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -246,7 +220,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -259,7 +233,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image13"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -272,7 +246,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image14"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -285,7 +259,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image15"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -298,7 +272,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image16"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -311,7 +285,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image17"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -324,7 +298,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image18"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -337,7 +311,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image19"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -350,7 +324,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image20"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -363,7 +337,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image21"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -376,7 +350,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image22"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -389,7 +363,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image23"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -402,7 +376,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image24"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -415,7 +389,7 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
-                <ImageView
+                <com.ortiz.touchview.TouchImageView
                     android:id="@+id/image25"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -430,4 +404,4 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
