--- a/app/src/main/res/layout/fragment_save_agv.xml
+++ b/app/src/main/res/layout/fragment_save_agv.xml
@@ -73,5 +73,6 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
         android:backgroundTint="#0F89D5"
+        android:visibility="gone"
         android:text="Save Image" />
 </LinearLayout>
